dashboard/static/app.css
#graphs {
    display: block;
}

#graphs svg {
    font-size: 10px;
}

#graphs ul {
    padding-top: 15px;
    margin-right: 10px;
}

.axis path, .axis line {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}

.axis .domain,
.axis .tick line {
    stroke: lightgrey;
    opacity: 0.5;
}

.tick text {
    fill: #545454;
    font-size: 12px;
}

path.line {
    stroke: steelblue;
    fill: none;
    stroke-width: 2;
}

path.line.highlight {
    stroke-width: 4;
}

/* Page global stuff */

.curtains-ct {
    height: 100%;
    width: 100%;
    position: fixed;
}

div.curtains-with-footer {
    height: calc(100% - 125px);
    width: calc(100% - 90px);
    position: fixed;
    padding-bottom: 30px;
    padding-left: 20px;
    padding-right: 20px;
    overflow-y: auto;
}

.curtains-header {
    margin-top: 10px;
    margin-bottom: 15px;
    font-size: 30px;
}

.curtains-logo {
    width: 250px;
}

.curtains-message {
    margin-left: 160px;
    margin-right: 170px;
    font-size: 13px;
}

.container-fluid {
    margin-top: 0px;
    padding-left: 0px;
}

.ovirt-sidebar {
    width: 100px;
}

.ovirt-sidebar ul {
    margin: 0;
    padding: 0;
    list-style: none;
    width: 90px;
    border-right: 1px solid #dadada;
    height: 100%;
    position: fixed;
    background-color: #fafafa;
    top: 0px;
}

.ovirt-sidebar ul li {
    border-bottom: 1px solid #dadada;
    display: block;
    font-size: 13px;
}

.ovirt-sidebar ul li a {
    border-bottom: 0;
    background-color: #fff;
    padding: 15px 10px;
    text-align: center;
    display: block;
    color: inherit;
    text-decoration: none;
    position: relative;
}

.ovirt-sidebar ul li a:hover {
    background-color: #f6f6f6;
}

.ovirt-sidebar ul li.active a:hover {
    background-color: #fff;
}

.ovirt-sidebar ul li a .fa {
    display: inline;
    font-size: 20px;
    color: #b3b3b3;
}

.ovirt-sidebar ul li.active a .fa {
    color: #0099d3;
}

.ovirt-sidebar ul li.active a:after {
    content: '';
    width: 4px;
    height: 100%;
    left: 0;
    top: 0;
    display: block;
    position: absolute;
    background-color: #0099d3;
}

#content {
    margin-left: 90px;
    margin-right: 0px;
    min-height: 100%;
}

#content > .row {
    margin-right: 0px;
}

.combobox_option {
    width: 100%;
}

/* HACK: https://github.com/patternfly/patternfly/issues/75 */
.blank-slate-pf .fa {
    color: #999999;
}

.blank-slate-pf .spinner-lg {
    height: 58px;
    width: 58px;
}

.ovirt-input {
    margin: 0 auto;
}

.he-input {
    text-align: left;
}

.btn-spacer {
  margin-top: 10px;
}

.viewport {
  white-space: nowrap;
  min-height: 200px;
  max-height: 200px;
  overflow: auto;
  padding-left: 15px;
}

.wizard-container-center {
    width: 100%;
}

.container-center {
  margin-left: -100px;
}

.ovirt-content-header-extra {
    background: #f5f5f5;
    border-bottom: 1px solid #ddd;
    padding: 10px 20px;
    width: 100%;
    position: fixed;
    z-index: 900;
    top: 0;
}

.ovirt-content-header-extra .btn-group:not(:first-child) {
    padding-left: 20px;
}

.pad-header {
    margin-top: 20px;
    margin-bottom: 20px;
}

.vcenter {
    min-height: 60px;
    display: flex;
    align-items: center;
}

.modal-body .entry {
    word-wrap: break-word;
    white-space: normal;
}

.health-icon {
  float:right;
  position: relative;
  right: 107px;
}

.accordion {
  display: table;
  width: 100%;
}

.accordion-row {
  display: table-row;
  line-height: 30px;
}

.accordion-header {
  display: table-cell;
  height: 30px;
  vertical-align: middle;
  text-align: left;
  color: black;
  font-size: 1.1em;
}

.accordion-icon {
  display: inline-block;
  margin-right: 50px;
}

.accordion-row:hover,
.accordion-row.open {
  background-color: #ededed;
}

.accordion-toggle {
  display: table-cell;
  width: 30px;
}

.accordion-toggle i {
  width: 30px;
  font-size: 24px;
  visibility: hidden;
  margin-left: 10px;
  margin-top: 5px;
}

.accordion-row.open i,
.accordion-row:hover .accordion-toggle i{
    color: #65bedf;
    background-color: #ededed;
    visibility: visible;
}

div.no-sidebar {
    margin-left: 5%;
}

.gdeploy-wizard-delete-icon {
    vertical-align: middle;
    padding-left: 5px;
}

.gdeploy-wizard-table {
    margin: auto;
}

.gdeploy-wizard-bricks-table {
    margin-left: 60px;
}

.gdeploy-wizard-table th{
    text-align: center;
}

.gdeploy-wizard-config-preview{
    width: 100%;
    height: 270px;
}

.gdeploy-wizard-host-ssh-info{
    margin-top:  30px;
}

.gdeploy-wizard-section-title{
    background: transparent;
}

.gdeploy-wizard-table tr,
.gdeploy-wizard-bricks-table tr
{
    vertical-align: top;
}

.gdeploy-wizard-thinp-checkbox{
    height: 26px;
    width: 18px;
}

.gdeploy-wizard-bricks-delete{
    text-align: left !important;
}
.gdeploy-wizard-bricks-row td,
.gdeploy-wizard-bricks-row th{
    padding-left: 0px;
    padding-right: 0px;
    text-align: center;
}

.he-preview-field {
    text-align: right;
    font-weight: bold;
}

label.he-preview-value {
    width: 300px;
    text-align: left;
    padding-left: 0px;
    overflow-wrap: break-word;
}

.he-form-container {
    margin-left: 5%;
}

label.he-input-label {
    text-align: left !important;
    margin-left: 5px;
    padding-left: 0px;
}

.he-input-row {
    display: inline-block;
    width: 100%;
}

div.he-text-with-units {
    padding-right: 0px;
}

.he-stage-header {
    height: 40px;
    text-align: center;
    margin-bottom: -10px;
}

h3.he-first-preview-header {
    text-align: center;
    padding-right: 40px;
    padding-top: 0px;
    margin-top: 0px;
    padding-bottom: 5px;
    border-bottom: solid darkgray 1px;
}

h3.he-preview-header {
    text-align: center;
    padding-right: 40px;
    padding-top: 10px;
    padding-bottom: 5px;
    border-bottom: solid darkgray 1px;
}

.he-data-loading-container {
    padding-top: 150px;
}

.he-setup-messages {
    white-space: nowrap;
    min-height: 150px;
    max-height: 150px;
    overflow: auto;
    padding-left: 15px;
}

.multi-row-text-box-button {
    width: 20px;
    border: solid 1px black;
    text-align: center;
    display: inline-block;
}

.multi-row-text-box-add-button {
    margin-left: 5px;
}

div.multi-row-text-box-button-container {
    width: 70px;
    padding-left: 10px;
    padding-right: 0px;
}

div.multi-row-text-box-input {
    width: calc(100% - 70px);
}

.gateway-message-container {
    display: table;
    border-collapse: separate;
    border-spacing: 5px;
}

.gateway-message {
    display: table-cell;
    vertical-align: middle
}

.he-error-msg {
    width: 500px;
    margin-left: auto;
    margin-right: auto;
}

.he-error-msg-container-outer {
    position: fixed;
    height: 100%;
    width: 100%;
}

.he-error-msg-container-inner {
    margin-top: 100px;
}

div.he-cpu-select-row {
    margin-bottom: 0px;
}

div.he-cpu-select-col {
    padding-right: 0px;
}

div.he-cpu-select-container {
    width: 100%;
}

div.he-cpu-select-warn-col {
    padding-left: 5px;
    height: 26px;
}

.he-warning-icon {
    font-size: 15px;
}

.vertical-center {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
}

input.he-mem-input {
    width: 60px;
    display: inline-block;
    margin-right: 5px;
}

i.info-icon {
    color: #0088CE;
    font-size: 15px;
    vertical-align: middle;
}

label.he-long-label-name {
    padding-left: 0px;
}

label.value-label {
    margin-bottom: 0px;
    padding-top: 3px;
}

.deployment-type-dropbox {
    display: inline-block;
    width: 300px;
    margin-top: 50px;
}

.horizontal-center {
    position: relative;
    margin-left: 50%;
    margin-right: -50%;
    transform: translate(-50%, -50%)
}

span.ansible-output-line {
    white-space: normal;
    word-wrap: break-word;
}

div.ansible-output-container {
    max-height: 450px;
    min-height: 200px;
    overflow: hidden;
}

div.ansible-output-panel {
    max-height: 405px;
}

div.deployment-status-spinner, div.storage-retrieval-spinner {
    display: inline-block;
    border-width: 5px;
    margin-right: 10px;
}

div.deployment-status-msg, div.storage-retrieval-msg {
    display: inline-block;
    top: 7px;
}

span.deployment-failure-icon {
    font-size: 18px;
    margin-right: 10px;
}

div.wizard-pf-row-fix {
    height: inherit;
    top: 162px;
    max-height: inherit;
}

input[type="radio"].iscsi-target-radio-button {
    padding-left: 5px;
}

div.iscsi-target, div.lun {
    margin-left: 20px
}

div.target-portal-group {
    padding-left: 35px;
}

span.iscsi-target-name, span.lun-prop-label {
    font-weight: bold;
}

div.lun-prop {
    margin-left: 17px;
}

.glusterHeading {
    height: auto;
    vertical-align: middle;
    padding-top: 3px;
    padding-left: 5px;
}

.manageGlusterButtons {
    text-align: right;
}

.hostList, .volumeList {
    width: 90%;
    margin: auto;
    margin-bottom: 30px;
}

.bricksList {
    width: 90%;
    margin: auto;
    margin-top: 20px;
    margin-bottom: 20px;
    border: 1px solid #ccc;
}

.statusIcon {
    margin-right: 3px;
    margin-left: 3px;
}

.fa-caret-up.statusIcon {
    color: green;
}

.fa-caret-down.statusIcon {
    color: red;
}

.manageGlusterButton {
    float: right;
    background-color: black;
    color: white;
}

div.he-wizard-footer {
    position: fixed;
    left: 90px;
    height: 125px;
    width: 100%;
    bottom: 0;
    background-color: #eceff1;
    border-top: solid lightgray 1px;
}

div.he-wizard-footer-content {
    margin-top: 20px;
}

div.he-wizard-footer-header {
    font-size: 14px;
    font-weight: bold;
    color: darkslategray;
    text-align: right;
}

ul.he-wizard-footer-links {
    margin: 0;
    padding: 0;
    list-style: none;
    text-align: left;
}

div.he-wizard-deployment-options-container {
    margin-top: 30px;
}

span.deployment-option-panel-container {
    display: inline-block;
    margin-right: 100px;
    vertical-align: top;
}

span.last-deployment-option-panel-container {
    margin-right: 0;
}

div.deployment-option-panel-icon {
    font-size: 100px;
    line-height: 100px;
    color: #9c9c9c;
}

span.deployment-option-panel-main-text {
    width: 150px;
}

h3.deployment-option-panel-main-text {
    line-height: 1.5;
}

div.deployment-option-panel-sub-text {
    width: 250px;
}

h3.deployment-option-panel-sub-text {
    width: 250px;
}

.he-wizard-collapsible-section-icon {
    display: inline-block;
    font-size: 20px;
    margin-right: 5px;
    width: 13px;
}

.he-wizard-collapsible-section-header {
    display: inline-block;
}

.he-wizard-collapse-section-link, .he-wizard-collapse-section-link:hover {
    color: #363636;
    border-bottom: none;
    text-decoration: none;
}

div.existing-gluster-config-dialog-btn-row {
    margin-top: 30px;
}

div.existing-gluster-config-dialog-text {
    font-size: 14px;
    text-align: center;
}

div.existing-gluster-config-dialog-note {
    font-size: 13px;
    text-align: center;
}

div.existing-gluster-config-note-row {
    margin-top: 15px;
}

.he-wizard-step-header {
    font-size: 13px;
    font-weight: 600;
}

.he-wizard-preview-step-header {
    margin-bottom: 15px;
}

span.nested-input .form-control {
    border-color: #bbb;
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

span.nested-input .form-control:focus {
    border-color: #0088ce;
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 136, 206, 0.6);
}

span.nested-input .form-control:hover {
    border-color: #7dc3e8;
}

#he-wizard-cidr-container {
    display: inline-block;
    margin-left: 0;
    margin-bottom: 0;
}

#he-wizard-cidr {
    width: 40px;
    display: inline-block;
}

#he-wizard-dns-error-container {
    margin-top: -10px;
}

